Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76809

QML accessibility does not take into account the Item's scale property

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.9.0 FF
    • 5.13.0, dev
    • None
    • macOS 10.14
      Xcode 12.2
      Qt 5.13
    • All
    • 7987d9060 (dev)

      QML accessibility does not take into account the Item's scale property when computing the Item's rect for the accessibility system.

      Attached is a screenshot showing the issue and a sample Qt project.

      To reproduce:

      1. Build the sample project for macOS
      2. Launch sample app
      3. Open Accessibility Inspector
      4. Target the QML button "A Button"

      You should see that the accessibility rect for the button is computed and displayed based on the unscaled Rect of the button. Where as it should be based on the scaled rect.

      I have reproduced this on iOS and macOS.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            rupert_d Rupert Daniel
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes