Account for item scale when determining a11y geometry

Map the item rect to scene coordinates, instead of
mapping the position only. This will account for item
or parent item scale.

We don't have QWindow::mapToGlobal(QRect), and the
rect has to be broken up again when mapping the position
to screen coordinates.

Fixes: QTBUG-76809
Change-Id: Ia3327936efba64792d95ca12f4ef44b2ace2e69c
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>